# perfectdeckcli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: authentication.md  mcp-client-setup.md  pricing-policy.md
src/perfectdeckcli/: __init__.py  app_store.py  cli.py  mcp_server.py  models.py  play_store.py  project_router.py  regional_pricing.py  repository.py  service.py  storage.py  validation.py
tests/: test_app_store_api.py  test_cli.py  test_credentials.py  test_diff_objects.py  test_init_from_existing.py  test_locale_mapping.py  test_management_ops.py  test_mcp_new_tools.py  test_mcp_server_tools.py  test_play_store_api.py  test_pricing.py  test_project_router.py  test_release_notes.py  test_router_edge_cases.py  test_service.py  test_service_edge_cases.py  test_service_push.py  test_snapshots.py  test_storage.py  test_transactions.py  test_validation.py  test_versioning.py
